# pyru-graphql

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/: emit_schema.rs
src/: lib.rs  main.rs
tests/: conftest.py  test_validation.py
